<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/poker_board"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dealerCard1"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/dealerCard4"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealerCard3"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/dealerCard3"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealerCard2"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/dealerCard9"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealerCard8"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/dealerCard8"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealerCard7"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/dealerCard7"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealerCard6"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/dealerCard5"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealerCard4"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/dealerCard6"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealerCard5"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/dealerCard2"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dealerCard1"
        app:layout_constraintTop_toBottomOf="@+id/dealerPile"
        app:layout_constraintVertical_bias="0.069" />

    <ImageView
        android:id="@+id/imgCard8"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCard7"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.519"/>

    <ImageView
        android:id="@+id/imgCard7"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCard6"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.519"/>

    <ImageView
        android:id="@+id/imgCard6"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCard5"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.519"/>

    <ImageView
        android:id="@+id/imgCard5"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCard4"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.519"/>

    <ImageView
        android:id="@+id/imgCard2"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCard1"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.519"/>

    <ImageView
        android:id="@+id/imgCard3"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCard2"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.519"/>

    <ImageView
        android:id="@+id/imgCard1"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.52" />

    <ImageView
        android:id="@+id/imgCard9"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCard8"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.519"/>

    <ImageView
        android:id="@+id/imgCard4"
        android:layout_width="45dp"
        android:layout_height="117dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgCard3"
        app:layout_constraintTop_toBottomOf="@+id/dealerCards"
        app:layout_constraintVertical_bias="0.519"/>

    <Button
        android:id="@+id/hitMeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HIT ME"
        android:textSize="25sp"
        app:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="stop"
        android:textSize="25sp"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/userPile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Pile: "
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userCards"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <TextView
        android:id="@+id/dealerPile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Opponent Pile:"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/userCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Cards:"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dealerCards"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/dealerCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dealer Cards"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dealerPile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/gameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>